syntax = "proto3";

option go_package="github.com/moooll/microservices-redis-grpc/position-service/protocol";

service ProfitAndLoss {
    rpc GetProfitAndLoss(ProfitAndLossRequest) returns (ProfitAndLossResponse) {}
}

message ProfitAndLossRequest {
    string id = 1;
    string company_name = 2;
    float buy_price = 3;
    float sell_price = 4;
    enum position {
        UNDEF = 0;
        OPEN = 5;
        CLOSE = 6;
    }
}

message ProfitAndLossResponse {
    string id = 7; 
    string company_name = 8;
    float profit_and_loss = 9;
}
